Add Listing api endpoint are added in this commit

--- a/appsettings.json
+++ b/appsettings.json
@@ -22,7 +22,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-4I6NFSK\\MSSQLSERVER01;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;User Id=sa;Password=123"
+    "DefaultConnection": "Data Source=DESKTOP-0CQKPBH;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;User Id=sa;Password=123"
   },
 
   "JwtConfig": {
