--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
 
   "JwtSettings": {
     "Secret": "MbzXgGDVCk9sNRI3bnBZXsjA405Y18NeN4gta+Nt35U=",
-    "ExpiryMinutes": 60,
+    "ExpiryMinutes": 160,
     "Issuer": "Rems_Auth.Api",
     "Audience": "Main_Rems.Client"
   },
@@ -22,7 +22,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-0CQKPBH;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;User Id=sa;Password=123"
+    "DefaultConnection": "Data Source=DESKTOP-0CQKPBH;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;"
   },
 
   "JwtConfig": {
