--- a/appsettings.json
+++ b/appsettings.json
@@ -22,7 +22,9 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-0CQKPBH;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Data Source=DESKTOP-0CQKPBH;Initial Catalog=REMS;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:remsdb.database.windows.net,1433;Initial Catalog=remsdb;Persist Security Info=False;User ID=remsdb;Password={Rao@78601};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
 
   "JwtConfig": {
